# mosaicraft-active-vision

./: .gitignore  .gitmodules  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
decision/: 000-charter.md  001-license.md  002-evaluation-metric.md  003-matching-algorithm.md  004-phase1-findings.md  005-citation-corrections.md  006-phase2-findings.md  007-oklch-aug-extraction.md
experiments/: benchmark_phase1.py  benchmark_phase2.py  benchmark_phase3.py
experiments/results/: phase1_baseline_2026-05-16.json  phase2_baseline_2026-05-16.json  phase3_baseline_2026-05-16.json  phase3_baseline_tight_2026-05-16.json
notes/: pot-pr-724-rescue.md  pot-pr-724-rescue.patch
paper/: outline.md  preprint.md
paper/figures/: make_fig_L_preservation.py  make_fig_paired_ci.py
src/mosaicraft_active_vision/: __init__.py  cost.py  matching.py  metrics.py  nbv.py
tests/: conftest.py  test_cost.py  test_matching.py  test_metrics.py
